# calendar-sync-automation

./: .dockerignore  .env.example  .gitignore  BrandGuidelines.md  Dockerfile  README.md  pyproject.toml  run_webapp.py  sync_exchange_icloud_calendar.py  test_sync_exchange_icloud_calendar.py  test_webapp_core.py
scripts/: generate_webapp_secrets.py
webapp/: __init__.py  backup_manager.py  config.py  database.py  main.py  repository.py  security.py  status_monitor.py  sync_service.py
webapp/static/: app.css  live_logs.js
webapp/templates/: backups.html  base.html  calendar.html  connections.html  dashboard.html  imprint.html  legal_base.html  login.html  login_2fa.html  logs.html  privacy.html  settings.html  setup.html  status.html
webapp/templates/partials/: legal_links.html
