[project]
name = "calendar-sync-webapp"
version = "0.1.0"
description = "Web application wrapper for calendar synchronization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "argon2-cffi>=23.1.0",
  "cryptography>=45.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.0",
  "PyJWT>=2.10.0",
  "qrcode>=8.2",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["webapp*"]

[tool.setuptools.package-data]
webapp = ["templates/*.html", "static/*.css"]
